--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
@@ -30,6 +30,7 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
